--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nejpoa admin</title>
-  <link rel="icon" type="image/jpg" href="./Logo_nej_poa.png"/>
+  <link rel="icon" type="image/jpg" href="../Logo_nej_poa.png"/>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
