atualizacao no favicon

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nejpoa admin</title>
-  <link rel="icon" type="image/jpg" href="../Logo_nej_poa.png"/>
+  <link rel="icon" type="image/jpg" href="https://scontent.fpoa13-1.fna.fbcdn.net/v/t39.30808-6/326530436_1345992546170767_6025738325478351482_n.png?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=w9Wy38gpkLAAX_P28BF&_nc_ht=scontent.fpoa13-1.fna&oh=00_AfAWGnxG30dEZ-7RsGcicvvmyh050w930_EdfpMC2Vr-7Q&oe=64183ECC"/>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
